rough test to create key pair and display output

--- a/Test/BitCoinSharp.Test.csproj
+++ b/Test/BitCoinSharp.Test.csproj
@@ -65,6 +65,7 @@
     <Compile Include="PeerAddressTest.cs" />
     <Compile Include="PeerGroupTest.cs" />
     <Compile Include="PeerTest.cs" />
+    <Compile Include="PrivateKeyTests.cs" />
     <Compile Include="ScriptTest.cs" />
     <Compile Include="Moq\SetupExtensions.cs" />
     <Compile Include="Store\BoundedOverheadBlockStoreTest.cs" />
