--- a/Test/packages.config
+++ b/Test/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="FluentAssertions" version="2.1.0.0" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
-  <package id="Moq" version="4.1.1311.0615" targetFramework="net35" requireReinstallation="True" />
+  <package id="Moq" version="4.1.1311.0615" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net35" />
   <package id="Should" version="1.1.20" targetFramework="net40" />
 </packages>
