--- a/Test/App.config
+++ b/Test/App.config
@@ -8,13 +8,13 @@
       <file value="_test_logs.txt" />
       <appendToFile value="true" />
       <layout type="log4net.Layout.PatternLayout,log4net">
-        <param name="ConversionPattern" value="%d - [%thread] -%level - [%logger]:%line - [%method] -  %m%n" />
+        <param name="ConversionPattern" value="[%method] -  %m%n" />
       </layout>
     </appender>
     <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
       <threshold value="DEBUG" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date %-5level %logger - %message%newline" />
+        <conversionPattern value="[%method]%newline %message%newline" />
       </layout>
     </appender>
     <root>
