--- a/Examples/app.config
+++ b/Examples/app.config
@@ -1,3 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+  </startup>
+  <log4net>
+    <appender name="FileAppender" type="log4net.Appender.FileAppender">
+      <file value="integration_test_logs.txt"/>
+      <appendToFile value="true"/>
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="[%method] -  %m%n"/>
+      </layout>
+    </appender>
+    <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
+      <threshold value="DEBUG"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="[%method]%newline %message%newline"/>
+      </layout>
+    </appender>
+    <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
+      <mapping>
+        <level value="ERROR"/>
+        <foreColor value="White"/>
+        <backColor value="Red, HighIntensity"/>
+      </mapping>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline"/>
+      </layout>
+    </appender>
+    <root>
+      <level value="ALL"/>
+      <appender-ref ref="FileAppender"/>
+      <appender-ref ref="TraceAppender"/>
+      <appender-ref ref="ColoredConsoleAppender"/>
+    </root>
+  </log4net>
+</configuration>
