--- a/Source/BitcoinSharp.Core/BitCoinSharp.Core.csproj
+++ b/Source/BitcoinSharp.Core/BitCoinSharp.Core.csproj
@@ -47,35 +47,35 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AbstractPeerEventListener.cs" />
     <Compile Include="Address.cs" />
-    <Compile Include="Base58.cs" />
     <Compile Include="BitcoinSerializer.cs" />
     <Compile Include="BlockChain.cs" />
-    <Compile Include="Collections\Generic\OrderedDictionary.cs" />
-    <Compile Include="Common\SystemTime.cs" />
-    <Compile Include="Common\UnixTime.cs" />
+    <Compile Include="Common\Collections\OrderedDictionary.cs" />
+    <Compile Include="Common\DatesAndTimes\SystemTime.cs" />
+    <Compile Include="Common\DatesAndTimes\UnixTime.cs" />
+    <Compile Include="Common\Encoding\Base58.cs" />
+    <Compile Include="Common\ExtensionMethods\StreamExtensions.cs" />
+    <Compile Include="Common\Hashing\Sha256Hash.cs" />
+    <Compile Include="Common\StreamInterop\ByteBuffer.cs" />
+    <Compile Include="Common\ValueTypes\VarInt.cs" />
     <Compile Include="Discovery\DnsDiscovery.cs" />
     <Compile Include="Discovery\IPeerDiscovery.cs" />
     <Compile Include="Discovery\IrcDiscovery.cs" />
     <Compile Include="Discovery\PeerDiscoveryException.cs" />
     <Compile Include="Discovery\SeedPeers.cs" />
-    <Compile Include="DownloadListener.cs" />
     <Compile Include="DumpedPrivateKey.cs" />
     <Compile Include="EcKey.cs" />
     <Compile Include="Exceptions\PeerException.cs" />
     <Compile Include="Exceptions\ProtocolException.cs" />
     <Compile Include="Exceptions\ScriptException.cs" />
-    <Compile Include="IO\ByteBuffer.cs" />
-    <Compile Include="IO\StreamExtensions.cs" />
-    <Compile Include="IPeerEventListener.cs" />
+    <Compile Include="Exceptions\VerificationException.cs" />
     <Compile Include="Messages\AddressMessage.cs" />
     <Compile Include="Messages\GetBlocksMessage.cs" />
     <Compile Include="Messages\GetDataMessage.cs" />
     <Compile Include="Messages\HeadersMessage.cs" />
     <Compile Include="Messages\InventoryMessage.cs" />
     <Compile Include="Messages\ListMessage.cs" />
-    <Compile Include="Messages\Message.cs" />
+    <Compile Include="Messages\AbstractMessage.cs" />
     <Compile Include="Messages\PeerAddress.cs" />
     <Compile Include="Messages\Ping.cs" />
     <Compile Include="Messages\Transaction.cs" />
@@ -83,34 +83,36 @@
     <Compile Include="Messages\TransactionOutPoint.cs" />
     <Compile Include="Messages\TransactionOutput.cs" />
     <Compile Include="Messages\UnknownMessage.cs" />
+    <Compile Include="Messages\VersionAckMessage.cs" />
     <Compile Include="Messages\VersionMessage.cs" />
     <Compile Include="Exceptions\AddressFormatException.cs" />
     <Compile Include="Messages\Block.cs" />
     <Compile Include="Model\InventoryItem.cs" />
-    <Compile Include="NetworkConnection.cs" />
-    <Compile Include="NetworkParameters.cs" />
-    <Compile Include="Peer.cs" />
-    <Compile Include="PeerGroup.cs" />
+    <Compile Include="Network\AbstractPeerEventListener.cs" />
+    <Compile Include="Network\DownloadListener.cs" />
+    <Compile Include="Network\IPeerEventListener.cs" />
+    <Compile Include="Network\NetworkConnection.cs" />
+    <Compile Include="Network\NetworkParameters.cs" />
+    <Compile Include="Network\Peer.cs" />
+    <Compile Include="Network\PeerGroup.cs" />
+    <Compile Include="PersistableMessages\StoredBlock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Script.cs" />
-    <Compile Include="Sha256Hash.cs" />
-    <Compile Include="StoredBlock.cs" />
     <Compile Include="Store\BlockStoreException.cs" />
     <Compile Include="Store\BoundedOverheadBlockStore.cs" />
     <Compile Include="Store\DiskBlockStore.cs" />
     <Compile Include="Store\IBlockStore.cs" />
     <Compile Include="Store\MemoryBlockStore.cs" />
     <Compile Include="Utils.cs" />
-    <Compile Include="VarInt.cs" />
-    <Compile Include="VerificationException.cs" />
-    <Compile Include="VersionAck.cs" />
     <Compile Include="VersionedChecksummedBytes.cs" />
     <Compile Include="Wallet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Common\Encryption\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
 </Project>
