--- a/Examples/BitcoinSharp.Examples/BitCoinSharp.Examples.csproj
+++ b/Examples/BitcoinSharp.Examples/BitCoinSharp.Examples.csproj
@@ -10,7 +10,7 @@
     <RootNamespace>BitCoinSharp.Examples</RootNamespace>
     <AssemblyName>BitCoinSharp.Examples</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
@@ -48,7 +48,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Source\BitCoinSharp.Core\BitCoinSharp.Core.csproj">
+    <ProjectReference Include="..\..\Source\BitCoinSharp.Core\BitCoinSharp.Core.csproj">
       <Project>{82B20619-3469-4DB6-8D18-628B64842499}</Project>
       <Name>BitCoinSharp.Core</Name>
     </ProjectReference>
