--- a/Tests/BitcoinSharp.Tests.Integration/App.config
+++ b/Tests/BitcoinSharp.Tests.Integration/App.config
@@ -1,26 +1,26 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
   <log4net>
     <appender name="FileAppender" type="log4net.Appender.FileAppender">
-      <file value="_test_logs.txt" />
-      <appendToFile value="true" />
+      <file value="_test_logs.txt"/>
+      <appendToFile value="true"/>
       <layout type="log4net.Layout.PatternLayout,log4net">
-        <param name="ConversionPattern" value="[%method] -  %m%n" />
+        <param name="ConversionPattern" value="[%method] -  %m%n"/>
       </layout>
     </appender>
     <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
-      <threshold value="DEBUG" />
+      <threshold value="DEBUG"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="[%method]%newline %message%newline" />
+        <conversionPattern value="[%method]%newline %message%newline"/>
       </layout>
     </appender>
     <root>
-      <level value="ALL" />
-      <appender-ref ref="FileAppender" />
-      <appender-ref ref="TraceAppender" />
+      <level value="ALL"/>
+      <appender-ref ref="FileAppender"/>
+      <appender-ref ref="TraceAppender"/>
     </root>
   </log4net>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
