--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\BitCoinSharp.Shared\packages.config" />
-  <repository path="..\Examples\packages.config" />
+  <repository path="..\Examples\BitCoinSharp.Examples\packages.config" />
   <repository path="..\Source\BitCoinSharp.Core\packages.config" />
   <repository path="..\Tests\BitcoinSharp.Tests.Integration\packages.config" />
   <repository path="..\Tests\BitCoinSharp.Tests.Unit\packages.config" />
