--- a/Tests/BitcoinSharp.Core.Tests.Integration/BitcoinSharp.Core.Tests.Integration.csproj
+++ b/Tests/BitcoinSharp.Core.Tests.Integration/BitcoinSharp.Core.Tests.Integration.csproj
@@ -58,9 +58,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Source\BitCoinSharp.Core\BitcoinSharp.Core.csproj">
+    <ProjectReference Include="..\..\Source\BitCoinSharp.Core\BitCoinSharp.Core.csproj">
       <Project>{82B20619-3469-4DB6-8D18-628B64842499}</Project>
-      <Name>BitcoinSharp.Core</Name>
+      <Name>BitCoinSharp.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
