--- a/Source/BitcoinSharp.Core/BitcoinSharp.Core.csproj
+++ b/Source/BitcoinSharp.Core/BitcoinSharp.Core.csproj
@@ -98,6 +98,11 @@
     <Compile Include="PersistableMessages\StoredBlock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Script.cs" />
+    <Compile Include="Shared\Enums\BalanceType.cs" />
+    <Compile Include="Shared\Enums\WalletPool.cs" />
+    <Compile Include="Shared\Events\WalletCoinsReceivedEventArgs.cs" />
+    <Compile Include="Shared\Events\WalletDeadTransactionEventArgs.cs" />
+    <Compile Include="Shared\Interfaces\IDefaultWallet.cs" />
     <Compile Include="Store\BlockStoreException.cs" />
     <Compile Include="Store\BoundedOverheadBlockStore.cs" />
     <Compile Include="Store\DiskBlockStore.cs" />
@@ -105,7 +110,6 @@
     <Compile Include="Store\MemoryBlockStore.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="VersionedChecksummedBytes.cs" />
-    <Compile Include="DefaultWallet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
