--- a/Tests/BitcoinSharp.Wallet.Tests.Unit/BitcoinSharp.Wallet.Tests.Unit.csproj
+++ b/Tests/BitcoinSharp.Wallet.Tests.Unit/BitcoinSharp.Wallet.Tests.Unit.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BitcoinSharp.Wallet.Tests.Unit</RootNamespace>
     <AssemblyName>BitcoinSharp.Wallet.Tests.Unit</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,8 +43,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WalletTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Source\BitcoinSharp.Core\BitcoinSharp.Core.csproj">
+      <Project>{82B20619-3469-4DB6-8D18-628B64842499}</Project>
+      <Name>BitcoinSharp.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Source\BitcoinSharp.Wallet\BitcoinSharp.Wallet.csproj">
+      <Project>{023C4D86-3604-4B71-9CD2-C9F4D4B6113C}</Project>
+      <Name>BitcoinSharp.Wallet</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BitcoinSharp.Testing\BitcoinSharp.Testing.csproj">
+      <Project>{504C1830-F995-44B7-9890-E88C6EFF722B}</Project>
+      <Name>BitcoinSharp.Testing</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
