--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,10 @@
 <repositories>
   <repository path="..\Examples\BitCoinSharp.Examples\packages.config" />
   <repository path="..\Source\BitCoinSharp.Core\packages.config" />
+  <repository path="..\Source\BitcoinSharp.Wallet\packages.config" />
+  <repository path="..\Tests\BitcoinSharp.Core.Tests.Integration\packages.config" />
+  <repository path="..\Tests\BitcoinSharp.Core.Tests.Unit\packages.config" />
   <repository path="..\Tests\BitcoinSharp.Tests.Integration\packages.config" />
   <repository path="..\Tests\BitCoinSharp.Tests.Unit\packages.config" />
+  <repository path="..\Tests\BitcoinSharp.Wallet.Tests.Unit\packages.config" />
 </repositories>
