--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Examples\BitCoinSharp.Examples\packages.config" />
+  <repository path="..\Source\BitcoinSharp.Blockchain\packages.config" />
   <repository path="..\Source\BitCoinSharp.Core\packages.config" />
   <repository path="..\Source\BitcoinSharp.Wallet\packages.config" />
+  <repository path="..\Tests\BitcoinSharp.Blockchain.Tests.Unit\packages.config" />
   <repository path="..\Tests\BitcoinSharp.Core.Tests.Integration\packages.config" />
   <repository path="..\Tests\BitcoinSharp.Core.Tests.Unit\packages.config" />
   <repository path="..\Tests\BitcoinSharp.Tests.Integration\packages.config" />
