--- a/Examples/BitcoinSharp.Examples/BitCoinSharp.Examples.csproj
+++ b/Examples/BitcoinSharp.Examples/BitCoinSharp.Examples.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.7.4114.6375, Culture=neutral, PublicKeyToken=0e99375e54769942">
       <SpecificVersion>False</SpecificVersion>
+	</Reference>
     <Reference Include="BouncyCastle.Crypto">
       <HintPath>..\..\packages\bccrypto-net-1.7-bin\BouncyCastle.Crypto.dll</HintPath>
     </Reference>
